Added CSS and gamepad support

--- a/commands/commands.html
+++ b/commands/commands.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Emuhub</title>
+    <link rel="stylesheet" href="commands.css">
   </head>
   <body>
     <script src="commands.js"></script>
