--- a/systems/systems.html
+++ b/systems/systems.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Emuhub</title>
+    <link rel="stylesheet" href="systems.css">
   </head>
   <body>
     <script src="systems.js"></script>
