--- a/games/games.html
+++ b/games/games.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Emuhub</title>
+    <link rel="stylesheet" href="games.css">
   </head>
   <body>
     <script src="games.js"></script>
