--- a/commands/commands.html
+++ b/commands/commands.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="commands.css">
   </head>
   <body>
+    <div class="commandsHeader"><img src="header.png" /></div>
+    <div class="previousCommand" id="command0"></div>
+    <div class="currentCommand" id="command1"></div>
+    <div class="nextCommand" id="command2"></div>
+    <div class="commandsFooter"><img src="footer.png" /></div>
     <script src="commands.js"></script>
   </body>
 </html>
