--- a/systems/systems.html
+++ b/systems/systems.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="systems.css">
   </head>
   <body>
-    <script src="systems.js"></script>
+      <div class="systemsHeader"><img src="header.png" /></div>
+      <div class="previousSystem" id="system0"></div>
+      <div class="currentSystem" id="system1"></div>
+      <div class="nextSystem" id="system2"></div>
+      <div class="systemsFooter"><img src="footer.png" /></div>
+      <script src="systems.js"></script>
   </body>
 </html>
