Extracted gamepad logic

--- a/systems/systems.html
+++ b/systems/systems.html
@@ -12,5 +12,6 @@
       <div class="nextSystem" id="system2"></div>
       <div class="systemsFooter"><img src="footer.png" /></div>
       <script src="systems.js"></script>
+      <script src="../gamepad/gamepad.js"></script>
   </body>
 </html>
