--- a/commands/commands.html
+++ b/commands/commands.html
@@ -12,5 +12,6 @@
     <div class="nextCommand" id="command2"></div>
     <div class="commandsFooter"><img src="footer.png" /></div>
     <script src="commands.js"></script>
+    <script src="../gamepad/gamepad.js"></script>
   </body>
 </html>
