--- a/games/games.html
+++ b/games/games.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="games.css">
   </head>
   <body>
+    <div class="gamesHeader"><img src="header.png" /></div>
+    <div class="farPreviousGame" id="game0"></div>
+    <div class="previousGame" id="game1"></div>
+    <div class="currentGame" id="game2"></div>
+    <div class="nextGame" id="game3"></div>
+    <div class="farNextGame" id="game4"></div>
+    <div class="gamesFooter"><img src="footer.png" /></div>
     <script src="games.js"></script>
     <script src="../gamepad/gamepad.js"></script>
   </body>
