--- a/commands/commands.html
+++ b/commands/commands.html
@@ -10,7 +10,7 @@
     <div class="previousCommand" id="command0"></div>
     <div class="currentCommand" id="command1"></div>
     <div class="nextCommand" id="command2"></div>
-    <div class="commandsFooter"><img src="../resources/footer.png" /></div>
+    <div class="commandsFooter" id="commandsFooter"></div>
     <script src="commands.js"></script>
     <script src="../gamepad/gamepad.js"></script>
   </body>
