--- a/games/games.html
+++ b/games/games.html
@@ -12,7 +12,7 @@
     <div class="currentGame" id="game2"></div>
     <div class="nextGame" id="game3"></div>
     <div class="farNextGame" id="game4"></div>
-    <div class="gamesFooter"><img src="../resources/footer.png" /></div>
+    <div class="gamesFooter" id="gamesFooter"></div>
     <script src="games.js"></script>
     <script src="../gamepad/gamepad.js"></script>
   </body>
